pxc/tests/test_183_localfld/lfuse3.px
public namespace lfuse3;
public import core::common -;
public import lf;

{
  lf::foo v;
  v.x = 10;
  // println(v.x); // error
  println(v.m1()); // error
}

